Final changes for version 1.0

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,10 +1,12 @@
-<div class="d-flex flex-column flex-lg-row gap-x-3">
-    <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center animate__animated animate__fadeIn">
-        <div class="portfolio-filter" style="min-width: 18rem;">
-            <h4>Explore My Portfolio</h4>
-            <p style="max-width: 20rem;" class="mb-4">Discover my diverse range of projects, showcasing my skills in <span class="text-primary">software development</span>, <span class="text-primary">logo design</span>, <span class="text-primary">web development</span>, and <span class="text-primary">user experience design</span>.</p>
-            <div class="divider"></div>
-            <div class="d-flex flex-column gap-y-2">
+<div class="d-flex flex-column flex-lg-row gap-x-3 ">
+    <div class="d-flex portfolio-container h-100 flex-column position-lg-sticky top-16 align-items-center animate__animated animate__fadeIn">
+        <div class="portfolio-filter d-flex flex-column flex-md-row justify-content-md-between flex-lg-column" style="min-width: 18rem;">
+            <div>
+                <h4>Explore My Portfolio</h4>
+                <p style="max-width: 20rem;" class="mb-4">Discover my diverse range of projects, showcasing my skills in <span class="text-primary">software development</span>, <span class="text-primary">logo design</span>, <span class="text-primary">web development</span>, and <span class="text-primary">user experience design</span>.</p>
+                <div class="divider"></div>
+            </div>
+            <div class="d-flex flex-column flex-wrap gap-y-2">
                 <div class="form-check checkbox-container">
                     <input class="form-check-input customCheckbox" onclick="handleCheckboxClick('Logos')" type="checkbox" id="logos" value="Logos" checked>
                     <label class="form-check-label" for="logos">Logos</label>
