added some sites

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -116,6 +116,32 @@
                         <a href="https://dlandman27.github.io/pixel-portfolio" target="_blank" class="btn btn-primary mb-2"><i class="icon ion-md-arrow-round-forward"></i> View Project</a>
                     </div>
                 </div>
+                
+                <div class="portfolio-container col-12 col-md-5 p-0">
+                    <img src="images/software/rsotw.png" class="br-1 portfolio-image" alt="Digital Portfolio">
+                    <div class="p-4">
+                        <h2>Random Sites On The Web!</h2>
+                        <hr class="header-underline mb-3">
+                        <div class="d-flex flex-wrap align-items-center gap-x-1">
+                            <small class="d-block pill-container mb-2" ><i class="icon ion-md-globe pill"></i> Website</small>
+                        </div>
+                        <p class="mt-4">Random Sites On The Web is a portfolio of random websites I build. Some are useful and some are just fun to play with. It is a great site to explore and see the variety of projects I've worked on.</p>
+                        <a href="https://randomsitesontheweb.com" target="_blank" class="btn btn-primary mb-2"><i class="icon ion-md-arrow-round-forward"></i> View Project</a>
+                    </div>
+                </div>
+                
+                <div class="portfolio-container col-12 col-md-5 p-0">
+                    <img src="images/software/tailwindfractal.png" class="br-1 portfolio-image" alt="Digital Portfolio">
+                    <div class="p-4">
+                        <h2>Tailwind CSS Fractal</h2>
+                        <hr class="header-underline mb-3">
+                        <div class="d-flex flex-wrap align-items-center gap-x-1">
+                            <small class="d-block pill-container mb-2" ><i class="icon ion-md-globe pill"></i> randomsitesontheweb</small>
+                        </div>
+                        <p class="mt-4">This fractal allows you to experiment with different colors and see how they would look on your website. It's a unique tool for visualizing color schemes and exploring their impact on user experience.</p>
+                        <a href="https://randomsitesontheweb.com/sites/fractal/" target="_blank" class="btn btn-primary mb-2"><i class="icon ion-md-arrow-round-forward"></i> View Project</a>
+                    </div>
+                </div>
 
                 <div class="portfolio-container col-12 col-md-5 p-0">
                     <img src="images/software/swirls.jpg" class="br-1 portfolio-image" alt="Wiigit">
