--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -155,6 +155,19 @@
                         <a href="https://randomsitesontheweb.com/sites/randomphotos/" target="_blank" class="btn btn-primary mb-2"><i class="icon ion-md-arrow-round-forward"></i> View Project</a>
                     </div>
                 </div>
+                
+                <div class="portfolio-container col-12 col-md-5 p-0">
+                    <img src="images/software/colorle.png" class="br-1 portfolio-image" alt="Digital Portfolio">
+                    <div class="p-4">
+                        <h2>Colorle</h2>
+                        <hr class="header-underline mb-3">
+                        <div class="d-flex flex-wrap align-items-center gap-x-1">
+                            <small class="d-block pill-container mb-2" ><i class="icon ion-md-globe pill"></i> randomsitesontheweb</small>
+                        </div>
+                        <p class="mt-4">Colorle is a wordle where you guess the RGB of a color. It's a fun and interactive way to explore the world of colors and challenge your color recognition skills.</p>
+                        <a href="https://randomsitesontheweb.com/sites/colorle/" target="_blank" class="btn btn-primary mb-2"><i class="icon ion-md-arrow-round-forward"></i> View Project</a>
+                    </div>
+                </div>
 
                 <div class="portfolio-container col-12 col-md-5 p-0">
                     <img src="images/software/swirls.jpg" class="br-1 portfolio-image" alt="Wiigit">
