--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,16 +1,22 @@
 :root {
-    --primary-color: #2D7AE5;
+    --primary-color: #007080;
     --text-heading: #1A212B;
     --text-body: #728197;
     --secondary-color: #2ecc71;
-    --font-family: "Lexend Deca", sans-serif;
+    --font-family: 'Montserrat', sans-serif;
     --font-optical-sizing: auto;
     --font-size: 16px;
-    --background-color: #F2F7FF;
+    --background-color: #FFFCF5;
     --text-color: #333;
     --container-background-color: #fff;
     --container-border-color: #E5E5E5;
 }
+
+.py-7{
+    padding-top: 5rem!important;
+    padding-bottom: 5rem!important;
+}
+
 
 /* @media (prefers-color-scheme: dark) {
     :root {
@@ -24,7 +30,7 @@
 
 
 body{
-    font-family: var(--font-family);
+    font-family: var(--font-family)!important;
     font-optical-sizing: var(--font-optical-sizing);
     font-size: var(--font-size);
     background-color: var(--background-color);
@@ -35,6 +41,12 @@ h1, h2, h3, h4, h5, h6{
     color: var(--text-heading);
 }
 
+hr{
+    border-color: var(--primary-color);
+    opacity: 0.2;
+    border-width: 2px;
+}
+
 h1{
     font-size: clamp(2rem, 2.5vw + 1rem, 2.5rem);
     font-weight: 600;
@@ -43,14 +55,15 @@ h1{
 p{
     color: var(--text-body);
     font-size: clamp(12px, 1.5vw + 12px, 16px)!important;
+    font-weight: 500;
 }
 
 .text-primary{
-    color: var(--primary-color);
+    color: var(--primary-color)!important;
 }
 
 .bg-primary{
-    background-color: var(--primary-color);
+    background-color: var(--primary-color)!important;
 }
 
 .rounded{
@@ -80,7 +93,7 @@ p{
 hr.header-underline{
     width: 20%;
     height: 4px;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color)!important;
     border-radius: 4px;
     margin: 0;
     display: block;
@@ -89,7 +102,7 @@ hr.header-underline{
 }
 
 .btn-primary{
-    background-color: var(--primary-color);
+    background-color: var(--primary-color)!important;
     border-radius: 0.5rem;
 }
 
@@ -195,13 +208,13 @@ h2{
     padding: 8px;
     font-size: 12px;
     font-weight: 500;
-    color: var(--primary-color);
+    color: var(--primary-color)!important;
     transition: all 0.3s ease;
     width: fit-content; 
 }
 /* 
 .pill-container:hover{
-    background-color: var(--primary-color);
+    background-color: var(--primary-color)!important;
     color: #fff;
     transition: all 0.3s ease;
 } */
