--- a/templates/about.html
+++ b/templates/about.html
@@ -1,54 +1,38 @@
-<div class="d-flex flex-column flex-lg-row gap-x-3">
-    <div class="d-flex portfolio-container h-100 flex-column align-items-center animate__animated animate__fadeIn">
-        <div class="portfolio-container p-0 overflow-hidden mb-4">
-            <img src="images/profile.jpg" class="br-1" alt="Profile Picture" style="width: 200px; height: 200px;">
-        </div>
-        <h3 class="text-center">Dylan&nbsp;Landman</h3>
-        <div class="d-flex flex-row flex-nowrap gap-2 align-items-center justify-content-center">
-            <div class="pill-container">Software&nbsp;Developer</div>
-            <div class="pill-container">Web&nbsp;Developer</div>
-        </div>
-        <div class="divider"></div>
-
-        <div class="d-flex flex-column flex-nowrap gap-3 justify-content-start">
-            <div class="d-flex flex-row flex-nowrap align-items-center mb-3" style="width: 100%;">
-                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
-                    <i class="icon ion-md-mail text-primary icon-md"></i>
-                </div>
-                <div>
-                    <p class="text-primary mb-0 small mb-2" >EMAIL</p>
-                    <a href="mailto:dylandman287@gmail.com" class="text-secondary mb-0 fs-14">dylandman287@gmail.com</a>
-                </div>
-            </div>
-
-            <div class="d-flex flex-row flex-nowrap align-items-center mb-3">
-                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
-                    <i class="icon ion-md-call text-primary icon-md"></i>
-                </div>
-                <div>
-                    <p class="text-primary mb-0 small mb-2">PHONE #</p>
-                    <a href="tel:+15165142959" class="text-secondary mb-0 fs-14">+1 (516) 514-2959</a>
-                </div>
-            </div>
-
-            <div class="d-flex flex-row flex-nowrap align-items-center">
-                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
-                    <i class="icon ion-md-pin text-primary icon-md"></i>
-                </div>
-                <div>
-                    <p class="text-primary mb-0 small mb-2">LOCATION</p>
-                    <p class="text-secondary mb-0 fs-14">Hoboken, NJ</p>
-                </div>
-            </div>
-        </div>
+<div class="px-4 py-7 my-5 text-center animate__animated animate__fadeIn" style="background-image: url('/images/grainy-texture.png'); background-size: cover;">
+    <i class="fa-brands fa-pagelines fa-6x text-primary mb-4"></i>
+    <h1 class="display-5 fw-bold mb-5">I Build Tools That Help People <br/> Grow&nbsp;and Discover Themselves</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="mb-4">I design systems that spark growth, encourage self-discovery, and make life simpler. Through intentional functionality and thoughtful design, I strive to empower people—including myself—to overcome challenges, adapt to change, and focus on what truly matters.</p>
+      <!--<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+      </div> -->
     </div>
-    <div>
-        <div class="portfolio-container mb-4 animate__animated animate__backInUp">
-            <h1>About Me</h1>
-            <hr class="header-underline">
-            <p class="mb-4">I believe technology has the power to <span class="text-primary">transform</span> how we live and work. I aim to build tools that <span class="text-primary">inspire productivity</span>, simplify daily life, and empower users to <span class="text-primary">reach their potential</span>. My work is driven by a vision to <span class="text-primary">merge design and functionality</span> into solutions that truly make a difference</p>
-            <a class="btn btn-primary btn-lg" href="/#/portfolio">View my work</a>
+</div>
+
+<div class="px-5 py-7 my-5 text-center animate__animated animate__fadeIn rounded" style="background-color: #F0EEE6; display: flex; justify-content: center; align-items: center;">
+    <div class="d-flex flex-row flex-wrap">
+        <div class="col-12 col-lg-6 text-left">
+            <i class="fa-solid fa-spa fa-5x text-primary mb-4"></i>
+            <h1 class="display-5 fw-bold mb-5">A Bit About Me</h1>
         </div>
+        <div class="col-12 col-lg-6">
+            <p class="mb-4 text-left">
+                Hi, I'm Dylan. I’m a software developer focused on building tools that solve real problems and make life easier. 
+                From apps that inspire personal growth to systems that streamline workflows, my goal is to make technology <span class="text-primary" style="font-weight: 600;">seamless, intuitive, and impactful</span>.
+            </p>
+            <p class="mb-4 text-left">
+                With a strong foundation in backend development and UX design, I combine logic and creativity to craft solutions that truly enhance the user experience. My approach is driven by curiosity and a belief that technology should empower, not complicate.
+            </p>
+        </div>
+
+    </div>
+</div>
+
+
+
+<div class="d-flex flex-column flex-lg-row gap-x-3">
+    <div>
         <div class="portfolio-container mb-4 animate__animated animate__backInUp">
             <h1>What I'm Doing</h1>
             <hr class="header-underline">
