--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-<div class="px-4 py-7 my-5 text-center animate__animated animate__fadeIn" style="background-image: url('/images/grainy-texture.png'); background-size: cover;">
+<div class="px-2 px-md-4 py-7 my-5 text-center animate__animated animate__fadeIn" style="background-image: url('/images/grainy-texture.png'); background-size: cover;">
     <i class="fa-brands fa-pagelines fa-6x text-primary mb-4"></i>
     <h1 class="display-5 fw-bold mb-5">I Build Tools That Help People <br/> Grow&nbsp;and Discover Themselves</h1>
     <div class="col-lg-6 mx-auto">
@@ -33,40 +33,40 @@
     <div class="col-lg-6 mx-auto">
       <p class="mb-4">Here's how my expertise in development, design, and problem-solving intersects to create seamless, impactful solutions.</p>
     </div>
-    <div class="container px-4 py-5 animate__animated animate__fadeIn">
+    <div class="px-0 mx-xl-4 py-5 animate__animated animate__fadeIn">
         <div class="row row-cols-1 row-cols-lg-2">
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                 <div class="card h-100 border-0 shadow-sm rounded" style="background-color: #F0EEE6;">
                     <div class="card-body p-5">
                         <i class="fa-solid fa-code fa-3x text-primary mb-4"></i>
-                        <h3 class="fw-bold mb-3">Software Development</h3>
+                        <h4 class="fw-bold mb-3">Software Development</h4>
                         <p class="card-text">I develop backend systems and infrastructures, ensuring apps are efficient, scalable, and built on solid foundations.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                 <div class="card h-100 border-0 shadow-sm rounded" style="background-color: #F0EEE6;">
                     <div class="card-body p-5">
                         <i class="fa-solid fa-pen-ruler fa-3x text-primary mb-4"></i>
-                        <h3 class="fw-bold mb-3">UX Design</h3>
+                        <h4 class="fw-bold mb-3">UX Design</h4>
                         <p class="card-text">I design user-friendly experiences, crafting intuitive interfaces and workflows that make apps easy and enjoyable to use.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                 <div class="card h-100 border-0 shadow-sm rounded" style="background-color: #F0EEE6;">
                     <div class="card-body p-5">
                         <i class="fa-brands fa-wordpress fa-3x text-primary mb-4"></i>
-                        <h3 class="fw-bold mb-3">WordPress Site Design</h3>
+                        <h4 class="fw-bold mb-3">WordPress Site Design</h4>
                         <p class="card-text">I create visually appealing and functional WordPress sites, tailoring designs to meet user needs and deliver engaging web experiences.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                 <div class="card h-100 border-0 shadow-sm rounded" style="background-color: #F0EEE6;">
                     <div class="card-body p-5">
                         <i class="fa-solid fa-mobile-button fa-3x text-primary mb-4"></i>
-                        <h3 class="fw-bold mb-3">App Design</h3>
+                        <h4 class="fw-bold mb-3">App Design</h4>
                         <p class="card-text">I build apps from scratch, focusing on creating, deploying, and refining tools that meet user needs and enhance functionality.</p>
                     </div>
                 </div>
@@ -74,6 +74,19 @@
         </div>
     </div>
 </div>
+
+<div class="px-4 py-7 my-5 text-center animate__animated animate__fadeIn" style="background-image: url('/images/project-background.png'); background-size: cover; background-position: center;">
+    <h1 class="display-5 fw-bold mb-3">Wiigit<br>Building Better Habits Through Thoughtful Design</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="mb-4">Wiigit is a passion project of mine, designed to help people track and understand their habits better. Stay tuned for updates as we bring this vision to life!</p>
+    </div>
+    <div class="col-lg-6 mx-auto">
+      <h2 class="mb-3">Project Overview</h2>
+      <p>Wiigit aims to empower individuals to take control of their habits, fostering personal growth and self-awareness. By providing a user-friendly platform for tracking and analyzing habits, Wiigit seeks to help people make positive changes in their lives.</p>
+    </div>
+</div>
+
+
 
 <div class="px-4 py-7 my-5 text-center bg-primary animate__animated animate__fadeIn rounded">
     <h1 class="display-5 fw-bold mb-2 text-white">Join the Newsletter</h1>
